# data-stack-starter-pack

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci_cleanup.yml
infra/postgres/init/: init_db.sh
infra/postgres/init/non-prod/: init_db.sh
infra/postgres/init/prod/: init_db.sh
infra/taskfiles/: dbt.yml  docker.yml  env_checks.yml  gha_runner.yml
scripts/: push_secrets_to_github.py
webshop/: dbt_project.yml  profiles.yml
webshop/macros/create_samples/: _create_samples__macros.yml  create_all_samples.sql
webshop/macros/schema_names/: generate_alias_name.sql  generate_schema_name.sql
webshop/models/staging/: _stg__sources.yml
