[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.0",
    "dbt-postgres>=1.9.0",
]

[tool.uv]
dev-dependencies = [
    "isort>=6.0.0",
    "pre-commit>=4.0.1",
    "pynacl>=1.5.0",
    "ruff>=0.9.6",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
    "yamllint>=1.35.1",
]

[tool.ruff]
include = ["pyproject.toml", "scripts/**/*.py"]

[dependency-groups]
book = [
    "mkdocs>=1.6.1",
]
ci = [
    "isort>=6.0.1",
    "ruff>=0.11.0",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
    "yamllint>=1.36.2",
]
